--- a/generate/templates/generate/length.html
+++ b/generate/templates/generate/length.html
@@ -1,11 +1,10 @@
-<h1><center>
-    Random Passwords!
-</center></h1>
+<h1><center>Random Passwords!</center></h1>
 
-<form action="{% url 'length' %}">
-    Enter Length : <input type="text" name="len_var">
-    <br>
-    <input type="checkbox" name="brackets" value="True">Include Brackets<br>
-    <input type="checkbox" name="special_characters" value="True">Include Special Characters<br>
-    <input type="submit" value="Submit">
+<form action="{% url 'generate:password' %}">
+  Enter Length : <input type="text" name="len_var" />
+  <br />
+  <input type="checkbox" name="brackets" value="True" />Include Brackets<br />
+  <input type="checkbox" name="special_characters" value="True" />Include
+  Special Characters<br />
+  <input type="submit" value="Submit" />
 </form>
