--- a/generate/templates/generate/pass.html
+++ b/generate/templates/generate/pass.html
@@ -1,10 +1,12 @@
-<h1>Password : </h1> <h1><strong>{{ gen_pass }}</strong></h1>
-<h2>Refresh the page to change this password </h2> 
+<h1>Password :</h1>
+<h1><strong>{{ gen_pass }}</strong></h1>
+<h2>Refresh the page to change this password</h2>
 
-<form action="{% url 'length' %}">
-    Generate another of length : <input type="text" name="len_var">
-    <br>
-    <input type="checkbox" name="brackets" value="True">Include Brackets<br>
-    <input type="checkbox" name="special_characters" value="True">Include Special Characters<br>
-    <input type="submit" value="Submit">
+<form action="{% url 'generate:password' %}">
+  Generate another of length : <input type="text" name="len_var" />
+  <br />
+  <input type="checkbox" name="brackets" value="True" />Include Brackets<br />
+  <input type="checkbox" name="special_characters" value="True" />Include
+  Special Characters<br />
+  <input type="submit" value="Submit" />
 </form>
